// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AuthenticateApi step() 1: Single step login journey 'PasswordGrant' 1`] = `
{
  "realm": "/alpha",
  "successUrl": "https://idc.scheuber.io/enduser/?realm=alpha",
  "tokenId": "S4aBkinY3L0Sh2B4jD3vml16N_c.*AAJTSQACMDIAAlNLABxXbzVnNXZvc092aS8rcUIydVhCMXVDQmNUNWc9AAR0eXBlAANDVFMAAlMxAAIwMQ..*",
}
`;

exports[`AuthenticateApi step() 2: Two step login journey 'PasswordGrant' 1`] = `
{
  "authId": "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJhdXRoSW5kZXhWYWx1ZSI6IlBhc3N3b3JkR3JhbnQiLCJvdGsiOiI1YWJ1cHNzMG91ZmJlaTBtNHFkaGxiM2kwYSIsImF1dGhJbmRleFR5cGUiOiJzZXJ2aWNlIiwicmVhbG0iOiIvYWxwaGEiLCJzZXNzaW9uSWQiOiJlbDlxemtyREtjSU9oemZwczhEUUw2NDRfNW8uKkFBSlRTUUFDTURJQUFsTkxBQnhPYzNoRVNrVnpURWRhVTFac1pTOVhjM0ExYWtGWlZqQm5UR005QUFSMGVYQmxBQWhEVkZOZlFWVlVTQUFDVXpFQUFqQXgqIiwiZXhwIjoxNjcxODM4OTY0LCJpYXQiOjE2NzE4MzgwNjR9.03F0nxUPAEjfXkUlmdhqQs_gpWcAlc14QapSKwzI3-0",
  "callbacks": [
    {
      "_id": 0,
      "input": [
        {
          "name": "IDToken1",
          "value": "",
        },
      ],
      "output": [
        {
          "name": "prompt",
          "value": "User Name",
        },
      ],
      "type": "NameCallback",
    },
    {
      "_id": 1,
      "input": [
        {
          "name": "IDToken2",
          "value": "",
        },
      ],
      "output": [
        {
          "name": "prompt",
          "value": "Password",
        },
      ],
      "type": "PasswordCallback",
    },
  ],
}
`;

exports[`AuthenticateApi step() 2: Two step login journey 'PasswordGrant' 2`] = `
{
  "realm": "/alpha",
  "successUrl": "https://idc.scheuber.io/enduser/?realm=alpha",
  "tokenId": "ptBVkkHnSFpZF19QxFNinyHNBa0.*AAJTSQACMDIAAlNLABx0SWI2MEVsMzFQQ0RWdDZSdk1sZmlSRE8zOHM9AAR0eXBlAANDVFMAAlMxAAIwMQ..*",
}
`;
